--- a/instagram_web/blueprints/users/templates/users/new.html
+++ b/instagram_web/blueprints/users/templates/users/new.html
@@ -1,1 +1,31 @@
-<h1>Users#new</h1>
+{% extends "_layout.html" %}
+{% block content %}
+
+<div class="container">
+    <h1>New User</h1>
+
+    <form action="{{ url_for('users.create') }}" method="POST">
+        <div class="form-group">
+            <label for="question">Name:</label>
+            <input type="text" name="name" class="form-control" />
+        </div>
+
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="text" name="email" class="form-control" />
+        </div>
+
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" name="username" class="form-control" />
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" name="password" class="form-control" />
+        </div>
+        <button type="submit" class="btn btn-primary">Add User</button>
+    </form>
+</div>
+
+{% endblock %}
