added edit user details

--- a/instagram_web/templates/404.html
+++ b/instagram_web/templates/404.html
@@ -1,9 +1,10 @@
 {% extends "_layout.html" %}
 
+{% block title %} Page Not Found {% endblock %}
 {% block content %}
 
 <h1>Page Not Found</h1>
-<h4>What you were looking for is just not there!</h4>
+<h1>What you were looking for is just not there.</h1>>
 <h4><a href="{{ url_for('home') }}">Go Somewhere Nice</a></h4>
 
 {% endblock %}
