--- a/instagram_web/blueprints/users/templates/users/new.html
+++ b/instagram_web/blueprints/users/templates/users/new.html
@@ -7,22 +7,22 @@
     <form action="{{ url_for('users.create') }}" method="POST">
         <div class="form-group">
             <label for="question">Name:</label>
-            <input type="text" name="name" class="form-control" />
+            <input type="text" name="name" placeholder="Full Name" class="form-control" />
         </div>
 
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="text" name="email" class="form-control" />
+            <input type="text" name="email" placeholder="Current Email" class="form-control" />
         </div>
 
         <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" name="username" class="form-control" />
+            <input type="text" name="username" placeholder="Username" class="form-control" />
         </div>
 
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" name="password" class="form-control" />
+            <input type="password" name="password" placeholder="Password" class="form-control" />
         </div>
         <button type="submit" class="btn btn-primary">Add User</button>
     </form>
