--- a/instagram_web/blueprints/users/templates/users/edit.html
+++ b/instagram_web/blueprints/users/templates/users/edit.html
@@ -11,11 +11,11 @@
             <input type="text" name="name_edit" placeholder="Update Name" class="form-control" value={{user.name}} />
         </div>
 
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="password">Password:</label>
-            <input type="text" name="password_edit" placeholder="Update Password" class="form-control"
+            <input type="password" name="password_edit" placeholder="Update Password" class="form-control"
                 value={{user.password}} />
-        </div>
+        </div> -->
 
         <div class="form-group">
             <label for="text">Email:</label>
