--- a/instagram_web/blueprints/users/templates/users/new.html
+++ b/instagram_web/blueprints/users/templates/users/new.html
@@ -5,6 +5,7 @@
     <h1>New User</h1>
 
     <form action="{{ url_for('users.create') }}" method="POST">
+        <input type="hidden" name="csrf_token" value="{{csrf_token()}}" />
         <div class="form-group">
             <label for="question">Name:</label>
             <input type="text" name="name" placeholder="Full Name" class="form-control" />
