--- a/instagram_web/templates/_layout.html
+++ b/instagram_web/templates/_layout.html
@@ -45,7 +45,7 @@
           Dropdown
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="{{ url_for('users.edit', id=current_user.id) }}">Update</a>
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{{ url_for('sessions.logout') }}">Log Out</a>
