added payment gateway

--- a/instagram_web/blueprints/donations/templates/donations/new.html
+++ b/instagram_web/blueprints/donations/templates/donations/new.html
@@ -7,15 +7,23 @@
 </head>
 
 <body>
-    <div id="dropin-container"></div>
-    <form id="pmn_form" action="{{url_for('donations.payment')}}" method="POST">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-        <input type="text" name="donation_amount" />
-        <input id="pmn_input" type="hidden" name="payment_method_nonce">
-
+    <div class="container">
+        <div class="card w-50 mx-auto d-block">
+            <img src="{{image.image_path_url}}" alt="picture" class="card-img-top" />
+        </div>
         <div id="dropin-container"></div>
-        <button id="submit-button">Request payment method</button>
-    </form>
+        <form id="pmn_form" action="{{url_for('donations.payment', image_id=image.id)}}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+            <div class="form-group">
+                <input type="text" name="donation_amount" placeholder="Enter donation amount"
+                    class="form-control d-block mx-auto w-50" />
+            </div>
+            <input id="pmn_input" type="hidden" name="payment_method_nonce">
+
+            <div id="dropin-container"></div>
+        </form>
+        <button class="btn btn-outline-success mx-auto d-block" id="submit-button">Donate</button>
+    </div>
 
     <script>
         const button = document.querySelector('#submit-button');
