--- a/instagram_web/templates/_layout.html
+++ b/instagram_web/templates/_layout.html
@@ -46,7 +46,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{{ url_for('users.edit', id=current_user.id) }}">Update</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="{{ url_for('users.show', username=current_user.username) }}">Profile</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{{ url_for('sessions.logout') }}">Log Out</a>
         </div>
