--- a/instagram_web/blueprints/users/templates/users/show.html
+++ b/instagram_web/blueprints/users/templates/users/show.html
@@ -4,19 +4,22 @@
 <div class="container">
     <h1>{{user.name}} Profile Page</h1>
 
-    <img src={{user.profile_image_url}} />
+    <img class="rounded-circle p-1 border border-dark w-30" style="max-width: 20rem" src={{user.profile_image_url}} />
 
     <form action="{{ url_for('users.pro_picture') }}" method="POST" enctype="multipart/form-data">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
         <br />
         <br />
-        <label for="image">Upload Your Profile Page</label>
-        <br></br>
+        <h3 for="image">Upload Your Profile Page</h3>
         <input type="file" name="profile_image">
         <br></br>
         <button type="submit">Upload</button>
     </form>
+
+    <br />
     
+    <div class="d-flex">
+        {% if current_user != user %}
         <form action="{{ url_for('fans_idols.create', idol_id=user.id )}}" method="POST">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             <input type="submit" class="btn btn-primary" value="follow" />
@@ -24,20 +27,27 @@
 
         <form action="{{ url_for('fans_idols.unfollow', idol_id=user.id)}}" method="POST">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-            <input type="submit" class="btn btn-primary" value="unfollow" />
+            <input type="submit" class="btn btn-warning" value="unfollow" />
         </form>
+        {% endif %}
+    </div>
 
+    {% if user.private == True and current_user != user %}
+    <p class="text-center">Sorry, this account is private!</p>
+
+    {% else %}
     <h2 class="text-center">Images</h2>
 
     {% for image in user.images %}
     <div class="card w-25 mx-auto d-block">
-        <img src="{{image.image_path_url}}" class="card-img-top">
+        <img class="card-img-top" style="width: 300" src="{{image.image_path_url}}" class="card-img-top">
         <div class="card-body">
             <a href="{{url_for('donations.new', image_id=image.id)}}" class="btn btn-primary mx-auto d-block">Donate
                 Now</a>
         </div>
     </div>
     {% endfor %}
+    {% endif %}
 
 
 </div>
