--- a/instagram_web/templates/_layout.html
+++ b/instagram_web/templates/_layout.html
@@ -10,56 +10,64 @@
   {% assets "home_css" %}
   <link rel="stylesheet" href="{{ ASSET_URL }}">
   {% endassets %}
-
+  
   {% assets "home_js" %}
   <script type="text/javascript" src="{{ ASSET_URL }}"></script>
   {% endassets %}
-
+  
   {% block header %}{% endblock %}
   <title>{% block title %}{% endblock %}NEXTAGRAM</title>
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary justify-content-between">
   <a class="navbar-brand" href="{{ url_for('home') }}"><img
-      src="https://is1-ssl.mzstatic.com/image/thumb/Purple127/v4/c5/25/8c/c5258ce9-90dc-b62a-c9af-9d6fd5f9b59d/source/512x512bb.jpg"
-      width="30px" height="30px" alt="next logo" />Nextagram</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    src="https://is1-ssl.mzstatic.com/image/thumb/Purple127/v4/c5/25/8c/c5258ce9-90dc-b62a-c9af-9d6fd5f9b59d/source/512x512bb.jpg"
+    width="30px" height="30px" alt="next logo" />Nextagram</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+  <div class="container">  
+  <div class="collapse navbar-collapse " id="navbarSupportedContent">
+    <ul class="navbar-nav mx-auto">
+        <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Filter</button>
+      </form>
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ url_for('users.show', username=current_user.username) }}">Profile</a>
+      </li>
+      {% if current_user.is_authenticated %}
+      <li class="nav-item active"></li>
+        <a class="nav-link" href="{{ url_for('sessions.logout') }}">Log Out</a>
+      </li>
+      {% else %}
       <li class="nav-item active">
         <a class="nav-link" href=" {{ url_for('sessions.new') }}">Log In</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href=" {{ url_for('users.new') }} ">Sign Up</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Coding (DND)</a>
-      </li>
+      {% endif %}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Settings
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="{{ url_for('users.edit', id=current_user.id) }}">Update</a>
-          <a class="dropdown-item" href="{{ url_for('users.show', username=current_user.username) }}">Profile</a>
+          <a class="dropdown-item" href="{{ url_for('users.edit', id=current_user.id) }}">Update Personal Details</a>
+          <a class="dropdown-item" href="{{ url_for('images.new') }}">Update Image</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{{ url_for('sessions.logout') }}">Log Out</a>
+          <a class="dropdown-item" href="#">Do more things</a>
         </div>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
-
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+  </div>
   </div>
 </nav>
 
