--- a/instagram_web/blueprints/users/templates/users/show.html
+++ b/instagram_web/blueprints/users/templates/users/show.html
@@ -34,9 +34,10 @@
 
     {% if user.private == True and current_user != user %}
     <p class="text-center">Sorry, this account is private!</p>
-
     {% else %}
+
     <h2 class="text-center" >Images</h2>
+    <button onclick="" class="align-item-center btn btn-primary">Upload Image</button>
 
     <div class="row">
     
