fixed search bar

--- a/instagram_web/blueprints/users/templates/users/new.html
+++ b/instagram_web/blueprints/users/templates/users/new.html
@@ -25,7 +25,7 @@
             <label for="password">Password:</label>
             <input type="password" name="password" placeholder="Password" class="form-control" />
         </div>
-        <button type="submit" class="btn btn-primary">Add User</button>
+        <button type="submit" class="btn btn-primary">Add Me</button>
     </form>
 </div>
 
