complete function transactions

--- a/instagram_web/blueprints/donations/templates/donations/show.html
+++ b/instagram_web/blueprints/donations/templates/donations/show.html
@@ -2,6 +2,10 @@
 {% block content %}
 
 <div class="container">
+    <h1>{{ result['header'] }}</h1>
+    <section>
+        <p>{{ result['message'] }}</p>
+    </section>
     <table>
         <thead class="colspan">Transaction Details</thead>
         <tbody>
@@ -23,6 +27,7 @@
             </tr>
         </tbody>
     </table>
+
     <div class="card-footer d-flex justify-content-center">
         <a href={{url_for('users.show', username=user.username)}}>Back to Profile</a>
     </div>
